--- a/client/authregform.ui
+++ b/client/authregform.ui
@@ -6,9 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>465</width>
+    <height>273</height>
    </rect>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>16777215</width>
+    <height>1000</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Form</string>
@@ -17,28 +23,59 @@
    <string notr="true">background-color: rgb(40,49,59);</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_3">
+   <property name="spacing">
+    <number>0</number>
+   </property>
    <item>
-    <widget class="QLabel" name="label_3">
-     <property name="font">
-      <font>
-       <pointsize>12</pointsize>
-      </font>
+    <layout class="QHBoxLayout" name="horizontalLayout_2">
+     <property name="spacing">
+      <number>7</number>
      </property>
-     <property name="styleSheet">
-      <string notr="true">color: rgb(220, 220, 220);</string>
+     <property name="sizeConstraint">
+      <enum>QLayout::SetDefaultConstraint</enum>
      </property>
-     <property name="text">
-      <string>Добро пожаловать</string>
-     </property>
-     <property name="alignment">
-      <set>Qt::AlignCenter</set>
-     </property>
-    </widget>
+     <item>
+      <widget class="QPushButton" name="btn_login">
+       <property name="autoFillBackground">
+        <bool>false</bool>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">border: none; 
+border-bottom: 3px solid rgb(97, 190, 46); 
+color: rgb(220, 220, 220);
+</string>
+       </property>
+       <property name="text">
+        <string>Войти</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="btn_registr">
+       <property name="styleSheet">
+        <string notr="true">border: none; 
+color: rgb(220, 220, 220);</string>
+       </property>
+       <property name="text">
+        <string>Регистрация</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
    </item>
    <item>
     <layout class="QVBoxLayout" name="verticalLayout_2">
+     <property name="spacing">
+      <number>7</number>
+     </property>
      <item>
       <layout class="QVBoxLayout" name="verticalLayout">
+       <property name="spacing">
+        <number>0</number>
+       </property>
+       <property name="sizeConstraint">
+        <enum>QLayout::SetMinimumSize</enum>
+       </property>
        <item>
         <widget class="QLabel" name="label">
          <property name="styleSheet">
@@ -68,12 +105,49 @@
           <string notr="true">color: rgb(220, 220, 220);</string>
          </property>
          <property name="text">
+          <string>Эл. почта:</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLineEdit" name="line_email">
+         <property name="styleSheet">
+          <string notr="true">color: rgb(220, 220, 220);</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="label_3">
+         <property name="styleSheet">
+          <string notr="true">color: rgb(220, 220, 220);</string>
+         </property>
+         <property name="text">
           <string>Пароль:</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QLineEdit" name="line_password">
+         <property name="styleSheet">
+          <string notr="true">color: rgb(220, 220, 220);</string>
+         </property>
+         <property name="echoMode">
+          <enum>QLineEdit::Password</enum>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="label_4">
+         <property name="styleSheet">
+          <string notr="true">color: rgb(220, 220, 220);</string>
+         </property>
+         <property name="text">
+          <string>Подтверждение:</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLineEdit" name="line_confirm">
          <property name="styleSheet">
           <string notr="true">color: rgb(220, 220, 220);</string>
          </property>
@@ -93,15 +167,15 @@
 color: rgb(40,49,59);</string>
          </property>
          <property name="text">
-          <string>Вход</string>
+          <string>Войти</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QPushButton" name="btn_reg">
          <property name="styleSheet">
-          <string notr="true">color: rgb(40,49,59);
-background-color: rgb(117,174,93);</string>
+          <string notr="true">background-color: rgb(117,174,93);
+color: rgb(40,49,59);</string>
          </property>
          <property name="text">
           <string>Регистрация</string>
