--- a/client/metod_nuton.ui
+++ b/client/metod_nuton.ui
@@ -53,12 +53,23 @@ color: rgb(40,49,59);</string>
     </widget>
    </item>
    <item>
-    <widget class="QLabel" name="label">
+    <widget class="QLabel" name="label_func">
      <property name="styleSheet">
       <string notr="true">color: rgb(220, 220, 220);</string>
      </property>
      <property name="text">
-      <string>Введите функцию:</string>
+      <string>Функция: </string>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QPushButton" name="btn_change_func">
+     <property name="styleSheet">
+      <string notr="true">background-color: rgb(117,174,93);
+color: rgb(40,49,59);</string>
+     </property>
+     <property name="text">
+      <string>Поменять функцию</string>
      </property>
     </widget>
    </item>
@@ -75,7 +86,7 @@ color: rgb(40,49,59);</string>
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="pushButton">
+      <widget class="QPushButton" name="btn_answer">
        <property name="styleSheet">
         <string notr="true">background-color: rgb(117,174,93);
 color: rgb(40,49,59);</string>
@@ -95,7 +106,7 @@ color: rgb(40,49,59);</string>
         <string notr="true">color: rgb(220, 220, 220);</string>
        </property>
        <property name="text">
-        <string>Ответ:</string>
+        <string/>
        </property>
       </widget>
      </item>
