--- a/client/stats.ui
+++ b/client/stats.ui
@@ -49,6 +49,10 @@ color: rgb(40,49,59);</string>
    </item>
    <item>
     <widget class="QPushButton" name="btn_stat">
+     <property name="styleSheet">
+      <string notr="true">background-color: rgb(117,174,93);
+color: rgb(40,49,59);</string>
+     </property>
      <property name="text">
       <string>Узнать статистику</string>
      </property>
@@ -56,6 +60,9 @@ color: rgb(40,49,59);</string>
    </item>
    <item>
     <widget class="QLabel" name="label_2">
+     <property name="styleSheet">
+      <string notr="true">color: rgb(220, 220, 220);</string>
+     </property>
      <property name="text">
       <string/>
      </property>
